fixed overlapping buttons in introduction

--- a/client/src/components/experiment/summary.css
+++ b/client/src/components/experiment/summary.css
@@ -54,7 +54,7 @@
   text-transform: uppercase;
 }
 
-.button-introduction {
+.button-said-why {
   position: absolute;
   top: 30%;
   left: calc(50% - 40px);
